Prevent double tap zoom on mobile

--- a/styles.css
+++ b/styles.css
@@ -100,6 +100,7 @@ button {
     button {
         width: 110px;
         height: 110px;
+        touch-action: manipulation;
     }
 
 }
